--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -264,6 +264,7 @@ input[type="radio"].visually-hidden {
 .pagination {
   display: flex;
   margin: 0;
+  margin-bottom: 30px;
   padding: 0;
 
   list-style: none;
