--- a/app/templates/catalog.html
+++ b/app/templates/catalog.html
@@ -34,7 +34,7 @@
   <main class="catalog-page catalog-container">
     <h1 class="visually-hidden">Каталог товаров</h1>
 
-    <h2 class="catalog-page__title">{{ user_query }} <span class="catalog-page__amount">{{ data_total }}</span></h2>
+    <h2 class="catalog-page__title">{{ user_query_output }} <span class="catalog-page__amount">{{ data_total }}</span></h2>
 
     <ul class="catalog-list">
       {% for item in pages.items %}
@@ -56,7 +56,7 @@
           {% if page == None %} class="visually-hidden"
           {% else %} class="pagination__item"
           {% endif %}>
-        <a href="./?q={{ user_query }}&page={{ page }}">{{ page }}</a>
+        <a href="./?q={{ user_query_output }}&page={{ page }}">{{ page }}</a>
       </li>
       {% endfor %}
     </ul>
