--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -202,6 +202,7 @@ input[type="radio"].visually-hidden {
   padding: 5px;
   margin-bottom: 20px;
 
+  background-color: #ffffff;
   border-radius: 2px;
   border: 1px solid #c0c0c0;
   box-shadow: 0 0 0 rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -214,10 +215,16 @@ input[type="radio"].visually-hidden {
 .catalog-list__title {
   padding-bottom: 5px;
   margin: 0;
-  margin-bottom: auto;
 
   font-size: 14px;
   text-align: center;
+}
+
+.catalog-list__image {
+  margin-top: auto;
+  margin-bottom: auto;
+
+  object-fit: contain;
 }
 
 .catalog-list__price {
