--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,7 @@
                  placeholder="Введите название товара">
 
         <p class="search-form__text">
-          Например: <a href="{{ url_for('catalog', q='клей боларс стандарт 25 кг') }}" class="search-form__example">клей боларс стандарт 25 кг</a>
+          Например: <a href="{{ url_for('catalog', q='(ветонит vetonit) (lr лр) 25') }}" class="search-form__example">(ветонит vetonit) (lr лр) 25</a>
           или <a href="{{ url_for('catalog', q='(кнауф knauf) (fliesen флизен) (плюс plus) 25 кг') }}" class="search-form__example">(кнауф knauf) (fliesen флизен) (плюс plus) 25 кг</a>
         </p>
       </div>
