--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -304,7 +304,8 @@ input[type="radio"].visually-hidden {
   border: 1px solid #606060;
 }
 
-.pagination__item a:hover {
+.pagination__item a:hover,
+.pagination__item--active a{
   color: #ffffff;
 
   background-color: #606060;
