--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,9 @@
 
         <p class="search-form__text">
           Например: <a href="{{ url_for('catalog', q='(ветонит vetonit) (lr лр) 25') }}" class="search-form__example">(ветонит vetonit) (lr лр) 25</a>
-          или <a href="{{ url_for('catalog', q='(кнауф knauf) (fliesen флизен) (плюс plus) 25 кг') }}" class="search-form__example">(кнауф knauf) (fliesen флизен) (плюс plus) 25 кг</a>
+          или <a href="{{ url_for('catalog', q='смеситель фильтр') }}" class="search-form__example">смеситель фильтр</a>
+          или <a href="{{ url_for('catalog', q='лопата снег') }}" class="search-form__example">лопата снег</a>
+          или <a href="{{ url_for('catalog', q='секатор') }}" class="search-form__example">секатор</a>
         </p>
       </div>
 
