--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -58,6 +58,7 @@ input[type="radio"].visually-hidden {
   display: flex;
   justify-content: space-between;
   padding: 15px;
+  padding-bottom: 10px;
 
   background-color: #033f82;
   border-radius: 5px;
@@ -90,6 +91,69 @@ input[type="radio"].visually-hidden {
   font: inherit;
   font-size: 20px;
   color: rgba(255, 255, 255, 1);
+}
+
+.toggle-button {
+  display: flex;
+  margin-top: 10px;
+}
+
+.checkbox input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  margin: 10px 0 0 20px;
+}
+
+.checkbox__text {
+  position: relative;
+  padding: 0 0 0 60px;
+  margin-right: 20px;
+
+  font: inherit;
+  font-size: 18px;
+  color: #ffffff;
+  font-weight: 700;
+
+  cursor: pointer;
+}
+
+.checkbox__text:before {
+  content: '';
+  position: absolute;
+  top: -4px;
+  left: 0;
+  width: 50px;
+  height: 26px;
+  border-radius: 13px;
+
+  background: #cdd1da;
+
+  box-shadow: inset 0 2px 3px rgba(0,0,0,.2);
+  transition: .2s;
+}
+
+.checkbox__text:after {
+  content: '';
+  position: absolute;
+  top: -2px;
+  left: 2px;
+  width: 22px;
+  height: 22px;
+  border-radius: 10px;
+
+  background: #ffffff;
+
+  box-shadow: 0 2px 5px rgba(0,0,0,.3);
+  transition: .2s;
+}
+
+.checkbox input:checked + .checkbox__text:before {
+  background: #9fd468;
+}
+
+.checkbox input:checked + .checkbox__text:after {
+  left: 26px;
 }
 
 .search-form__example {
@@ -235,13 +299,19 @@ input[type="radio"].visually-hidden {
   font-weight: 700;
 }
 
-.catalog-list__shop {
+.catalog-list__shop,
+.catalog-list__available {
   margin: 0;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 
   font-size: 14px;
   font-weight: 700;
   color: rgba(0, 0, 0, 0.6);
+}
+
+.catalog-list__available {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .catalog-list__button {
